# SilentPixel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SilentPixel.rc  SilentPixel.sln  SilentPixel.vcxproj  SilentPixel.vcxproj.filters  VERSION.txt  build_release.bat  build_release_run.ps1
src/: CleanExportService.cpp  CleanExportService.h  HashService.cpp  HashService.h  HeifDecoder.cpp  HeifDecoder.h  ImageLoader.cpp  ImageLoader.h  MainWindow.cpp  MainWindow.h  MetadataService.cpp  MetadataService.h  PrivacyGuard.cpp  PrivacyGuard.h  UiState.cpp  UiState.h  Utils.h  main.cpp
